# CIDEPINT-UNLP

./: .gitignore  README.md  localhost+2-key.pem  localhost+2.pem  manage.py  pyproject.toml
administracion/: app.py  package-lock.json  package.json  pyproject.toml  readme.md  tailwind.config.js
administracion/src/core/: config.py  database.py
administracion/src/core/Area/: __init__.py
administracion/src/core/Empleado/: __init__.py
administracion/src/core/compras/: compra.py
administracion/src/core/fondos/: fondo.py
administracion/src/core/ingresos/: ingreso.py
administracion/src/core/models/: archivo.py  area.py  ausencia.py  personal.py
administracion/src/core/proveedores/: proveedor.py
administracion/src/core/servicios/: archivos_admin.py  patrimonio.py  personal.py
administracion/src/web/: __init__.py
administracion/src/web/controllers/: archivos_admin.py  auth_controller.py  compra.py  contable.py  documentoAPI.py  patrimonio.py  reset_password.py  roles.py  routes.py  rutas.py
administracion/src/web/controllers/personal/: area_controller.py  ausencia_controller.py  personal_controller.py
administracion/src/web/forms/: bien_baja.py  bien_nuevo.py  carpeta_nueva.py  descargar_form.py  distribucion_nuevo.py  documento_legajo_nuevo.py  fondo_nuevo.py  form_agregar_compra.py  form_agregar_proveedor.py  form_aprobar_compra.py  form_editar_compra.py  form_editar_proveedor.py  form_realizar_compra.py  ingreso_nuevo.py
administracion/src/web/handlers/: handlers.py
administracion/src/web/templates/: cambiar_contrasena.html  csrf_error.html  landing_page.html  layout.html  login.html  navbar.html  reset_password.html  reset_with_token.html  topicos.html
administracion/src/web/templates/Contable/: contable.html  crear_distribucion.html  crear_fondo.html  detalle_fondo.html  home.html  legajo_adicionales.html  legajos.html  listar_distribuciones.html
administracion/src/web/templates/archivos_admin/: editar_carpeta.html  lista_archivos.html  lista_carpetas.html  nueva_carpeta.html  nueva_subcarpeta.html
administracion/src/web/templates/compras/: aprobar_compra.html  creacion_compra.html  creacion_proveedor.html  edicion_compra.html  edicion_proveedor.html  lista.html  (+7 more)
administracion/static/css/: tailwind.css
servicios/backend/: app.py  localhost+2-key.pem  localhost+2.pem  pyproject.toml
servicios/backend/src/core/: config.py
servicios/backend/src/web/: __init__.py
(+254 files in other folders)
