[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Milena Confeggi <milenaconfeggi@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
marshmallow = "^3.23.1"
flask-cors = "^5.0.0"
flask-wtf = "^1.2.2"
flask-sqlalchemy = "^3.1.1"
cryptography = "^44.0.0"
flask-session = "^0.8.0"
flask-bcrypt = "^1.0.1"
bcrypt = "^4.2.1"
jsonify = "^0.5"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

